# stupid-simple-kv

./: Cargo.toml  LICENSE.md  README.md
benches/: bench_keys.rs  bench_memory.rs  bench_sqlite.rs  benches_kv.rs
src/: kv_error.rs  kv_value.rs  lib.rs  list_builder.rs  tests.rs
src/backends/: memory_backend.rs  mod.rs  sqlite_backend.rs
src/keys/: decode.rs  display.rs  encode.rs  encoding.rs  key_decoder.rs  key_segment.rs  key_traits.rs  mod.rs  types.rs
src/storages/: kv_backend.rs  memory_backend.rs  sqlite_backend.rs
src/utils/: kv_value.rs  list_builder.rs
