[package]
name = "stupid-simple-kv"
version = "0.2.3"
edition = "2024"
description = "A dead-simple, pluggable, binary-sorted key-value store for Rust with FoundationDB-style keys. In-memory and SQLite backends. Zero-boilerplate and easy iteration."
license = "MIT OR Apache-2.0"
authors = ["Siddharth S Singh <me@shantaram.xyz>"]
homepage = "https://github.com/xyzshantaram/stupid-simple-kv"
repository = "https://github.com/xyzshantaram/stupid-simple-kv"
documentation = "https://docs.rs/stupid-simple-kv"
readme = "README.md"
keywords = ["kv", "key-value", "storage", "sqlite", "fdb"]
categories = ["database", "caching", "data-structures"]

[dependencies]
bincode = "2.0.1"
rusqlite = { version = "0.35", optional = true, features = ["blob"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]

[profile.bench]
debug = true
